<?xml version="1.0"?>
<package>
  <name>tb3jp</name>
  <version>0.0.1</version>
  <description>
    ROS packages for the Turtlebot3 Japan
  </description>
  <license>Apache License 2.0</license>
  <author email="yoshimaru@robotis.com">Yoshimaru Tanaka</author>
  <maintainer email="yoshimaru@robotis.com">Yoshimaru Tanaka</maintainer>
  <url type="bugtracker">https://github.com/yoshimalucky/tb3jp/issues</url>
  <url type="repository">https://github.com/yoshimalucky/tb3jp</url>
  <buildtool_depend>catkin</buildtool_depend>
  <run_depend>turtlebot3_description</run_depend>
  <run_depend>zed_wrapper</run_depend>
  <run_depend>rtabmap_ros</run_depend>
  <run_depend>tb3jp_description</run_depend>
  <run_depend>tb3jp_bringup</run_depend>
  <export><metapackage/></export>
</package>
